feat: Phase 8d — 가입 유스케이스 + 다중 인스턴스 outbox 워커
두 시스템 쓰기(IAM DB + Keycloak)를 outbox 로 처리한다. 다중 인스턴스로 뜨는 것을 전제로
워커를 설계했고, 실제 PostgreSQL 로 동시성을 검증했다.

- V1__init_iam.sql: user_profile + outbox_record.
  outbox 클레임용 **부분 인덱스**(WHERE status='PENDING')를 둔다. 처리 완료분이 쌓여도 인덱스는
  PENDING 만 담으므로 클레임 비용이 커지지 않는다.
  user_profile.user_ref 가 nullable 인 것은 버그가 아니라 outbox 의 결과다 — 가입 시점에는
  Keycloak 사용자가 아직 없다.

- RegisterUserService: @Transactional 하나가 이 유스케이스의 전부다.
  UserProfile 저장과 OutboxRecord 저장이 **같은 커밋**이어야 한다. 프로필만 커밋되면 생성 지시가
  유실되어 그 사용자는 영원히 PENDING_IDENTITY 가 되고, 반대면 워커가 없는 프로필을 채우려 한다.
  둘 다 로컬 DB 쓰기라 하나의 로컬 트랜잭션으로 원자성이 보장된다 — 이것이 "Keycloak 먼저" 순서를
  뒤집은 이유다(§6.3).
  Keycloak 호출을 트랜잭션에 넣지 않는다: 응답을 기다리며 커넥션을 잡고 롤백 범위도 모호해진다.

- OutboxProcessor: 클레임~결과 반영을 **한 트랜잭션**으로 묶는다.
  외부 호출이 트랜잭션 안에 들어가 커넥션을 점유하지만, 그 대가로 **워커가 죽으면 롤백 → 락 해제 →
  다른 인스턴스가 즉시 이어받는다.** 대안(claim → 처리 → 반영)은 워커 사망 시 IN_PROGRESS 로 멈춰
  stale lock 회수 로직이 필요한데, 그 로직 자체가 새로운 버그 원천이다.
  다중 인스턴스에서 인스턴스가 죽는 것은 예외가 아니라 일상(롤링 배포·오토스케일·OOM)이다.

  예외를 재시도 가능/불가로 나눠 처리한다. 이 구분이 없으면 고칠 수 없는 실패를 10번 반복하거나,
  잠깐의 네트워크 장애로 가입이 영영 실패한다.

- OutboxRecordJpaRepository: native 쿼리로 FOR UPDATE SKIP LOCKED.
  Hibernate 힌트(lock.timeout=-2)는 방언·버전에 따라 **조용히 일반 FOR UPDATE 로 동작할 위험**이
  있다. 그러면 워커가 직렬화되는데 기능은 되므로 알아채기 어렵다.

- OutboxPollingScheduler: **ShedLock 같은 분산 락을 일부러 쓰지 않았다.**
  중복을 막는 지점이 스케줄러가 아니라 DB 행 잠금이기 때문이다. 분산 락을 걸면 한 번에 하나만 돌아
  다중 인스턴스의 이점이 사라진다 — 안전장치가 아니라 병목이 된다.
  @Scheduled 에서 예외가 새면 이후 스케줄이 중단될 수 있어 폴링 전체를 try-catch 로 감쌌다.

- RegisterController: 공개 라우트(인증 없음 — 가입은 사용자 토큰이 없다).
  DataIntegrityViolationException → 409 핸들러를 추가했다. 사전 조회와 INSERT 사이는 check-then-act
  구간이라 경합 시 unique 위반이 500 으로 샐 수 있다. 4스레드 실측에서는 [201,409,409,409] 로
  거기까지 가지 않았지만, **재현되지 않는다는 것이 안전하다는 뜻은 아니다.**

  ⚠️ rate limit 은 넣지 않았다. 게이트웨이(Phase 3 토큰버킷)가 담당할 몫이고 IAM 에 또 두면 정책이
  갈라진다. **P8f 전까지 이 엔드포인트는 무방비이므로 외부 노출 금지.**

- PayloadSerializerPort: Jackson 을 application 에 들이지 않으려는 포트. ArchUnit 에 com.fasterxml
  금지를 추가해 강제한다. 저장 형식은 어댑터 관심사다.

- co